# napari-matplotlib

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  test.py  test_gen_figure.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_docs.yml  codeql.yml  docs.yml  napari_hub_preview.yml  publish.yml  test.yml  test_and_deploy.yml
.napari/: config.yml
_downloads/0b331cf4cf159a6a57f4531f3dbddde0/: histogram.ipynb
_downloads/356cf268fed339dfb5abbb496bbc3b9d/: features_scatter.ipynb
_downloads/7aa3996e8b2e09621c2758c6e897e5b9/: scatter.ipynb
_downloads/c26c34c6833b66e54ef0d268128ff00d/: slice.ipynb
_images/: inheritance-2166484d96ed7a3fdf70323a66ed5dbc90ce10d9.png.map  inheritance-750f96349ce13fdda5d45219e3a78d33ac61bb4d.png.map
_sources/: changelog.rst.txt
_sources/api/: napari_matplotlib.FeaturesScatterWidget.rst.txt  napari_matplotlib.HistogramWidget.rst.txt  napari_matplotlib.ScatterBaseWidget.rst.txt  napari_matplotlib.ScatterWidget.rst.txt  napari_matplotlib.SliceWidget.rst.txt  napari_matplotlib.base.BaseNapariMPLWidget.rst.txt  napari_matplotlib.base.NapariMPLWidget.rst.txt  napari_matplotlib.base.SingleAxesWidget.rst.txt
_sources/auto_examples/: features_scatter.rst.txt  histogram.rst.txt  index.rst.txt  scatter.rst.txt  sg_execution_times.rst.txt  slice.rst.txt
_sources/guide/: third_party.rst.txt
api/: napari_matplotlib.FeaturesScatterWidget.html  napari_matplotlib.HistogramWidget.html  napari_matplotlib.ScatterBaseWidget.html  napari_matplotlib.ScatterWidget.html  napari_matplotlib.SliceWidget.html  napari_matplotlib.base.BaseNapariMPLWidget.html  napari_matplotlib.base.NapariMPLWidget.html  napari_matplotlib.base.SingleAxesWidget.html
auto_examples/: features_scatter.html  histogram.html  index.html  scatter.html  sg_execution_times.html  slice.html
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  make.bat  start_xvfb.sh  third_party.rst  user_guide.rst
docs/api/: napari_matplotlib.HistogramWidget.rst
docs/guide/: index.rst  third_party.rst
examples/: feature_histogram.ipynb  features_hist.py  features_scatter.py  histogram.py  line_features.py  line_features_over_time.py  line_profile.py  scatter.py  slice.py  toolbar_extra_button.py
guide/: index.html  third_party.html
src/napari_matplotlib/: __init__.py  _layer_selection.py  _widget.py  base.py  feature_histogram.py  features.py  histogram.py  layer_selectors.py  line.py  napari.yaml  scatter.py  slice.py  util.py
src/napari_matplotlib/_tests/: test_widget.py
src/napari_matplotlib/reports/: fig_comparison.html
src/napari_matplotlib/styles/: README.md  light.mplstyle
src/napari_matplotlib/tests/: conftest.py  helpers.py  test.ipynb  test_feature_histogram.py  test_histogram.py  test_layer_changes.py  test_layer_selectors.py  test_scatter.py  test_slice.py  test_theme.py  test_ui.py  test_util.py
src/napari_matplotlib/tests/data/: test_theme.mplstyle
src/napari_matplotlib/tests/plotting/: test_plotting.py
src/napari_matplotlib/tests/scatter/: test_scatter.py  test_scatter_features.py
src/napari_matplotlib/tests/utils/: test_util.py
