[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-matplotlib"
description = "A plugin to use Matplotlib with napari"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "David Stansby", email = "d.stansby@ucl.ac.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "matplotlib",
    "napari>=0.5",
    "numpy>=1.23",
    "tinycss2",
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/matplotlib/napari-matplotlib/issues"
Documentation = "https://napari-matplotlib.github.io"
"Source Code" = "https://github.com/matplotlib/napari-matplotlib"
"User Support" = "https://github.com/matplotlib/napari-matplotlib/issues"

[project.entry-points."napari.manifest"]
"napari-matplotlib" = "napari_matplotlib:napari.yaml"

[project.optional-dependencies]
docs = [
    "napari[all]",
    "numpydoc",
    "pydantic<2",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-gallery",
]
testing = [
    "napari[pyqt6_experimental]>=0.4.18",
    "pooch",
    "pyqt6",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-mpl",
    "pytest-qt",
    "tox",
    "pytest-xvfb; sys_platform == 'linux'",
]

[tool.setuptools_scm]
write_to = "src/napari_matplotlib/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:(?s).*Pyarrow will become a required dependency of pandas",
    # Coming from vispy
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:`np.bool8` is a deprecated alias for `np.bool_`:DeprecationWarning",
    # Coming from pydantic via napari
    "ignore:Pickle, copy, and deepcopy support will be removed from itertools in Python 3.14.:DeprecationWarning",
    # Until we stop supporting older numpy versions (<2.1)
    "ignore:(?s).*`newshape` keyword argument is deprecated.*$:DeprecationWarning",
]
qt_api = "pyqt6"
addopts = [
    "--mpl",
    "--mpl-baseline-relative",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
minversion = "7"
testpaths = ["src/napari_matplotlib/tests"]
log_cli_level = "INFO"
xfail_strict = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["B", "I", "UP", "F", "E", "W", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D200", # One-line docstring should fit on one line
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood

]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D"]
"examples/*" = ["D"]
"src/napari_matplotlib/tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
# Block below are checks that form part of mypy 'strict' mode
strict = true
disallow_subclassing_any = false # TODO: fix
warn_return_any = false          # TODO: fix
ignore_missing_imports = true

enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = ["napari_matplotlib/tests/*"]
disallow_untyped_defs = false

[dependency-groups]
docs = [
    "napari[all]",
    "numpydoc",
    "pydantic<2",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-gallery",
]
test = [
    "napari[pyqt6_experimental]>=0.4.18",
    "pooch",
    "pyqt6",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-mpl",
    "pytest-qt",
    "tox",
    "pytest-xvfb; sys_platform == 'linux'",
]
dev = [
    "napari[all]",
    "numpydoc",
    "pydantic<2",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-gallery",
    "napari[pyqt6_experimental]>=0.4.18",
    "pooch",
    "pyqt6",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-mpl",
    "pytest-qt",
    "tox",
    "pytest-xvfb; sys_platform == 'linux'",
]
