[metadata]
name = napari_matplotlib
description = A plugin to use Matplotlib with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dstansby/napari-matplotlib
author = David Stansby
author_email = d.stansby@ucl.ac.uk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/dstansby/napari-matplotlib/issues
    Documentation = https://github.com/dstansby/napari-matplotlib#README.md
    Source Code = https://github.com/dstansby/napari-matplotlib
    User Support = https://github.com/dstansby/napari-matplotlib/issues

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    napari
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-matplotlib = napari_matplotlib:napari.yaml

[options.extras_require]
docs =
    pydata-sphinx-theme
testing =
    napari[pyqt5]
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb ; sys_platform == 'linux'
    tox

[options.package_data]
* = *.yaml
