[metadata]
name = napari_matplotlib
description = A plugin to use Matplotlib with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matplotlib/napari-matplotlib
author = David Stansby
author_email = d.stansby@ucl.ac.uk
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/matplotlib/napari-matplotlib/issues
    Documentation = https://github.com/matplotlib/napari-matplotlib#README.md
    Source Code = https://github.com/matplotlib/napari-matplotlib
    User Support = https://github.com/matplotlib/napari-matplotlib/issues

[options]
packages = find:
install_requires =
    magicgui
    matplotlib
    napari
    numpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-matplotlib = napari_matplotlib:napari.yaml

[options.extras_require]
docs =
    numpydoc
    pydata-sphinx-theme
    qtgallery
    sphinx
    sphinx-automodapi
    sphinx-gallery
testing =
    napari[pyqt5]
    pytest
    pytest-cov
    pytest-qt
    tox
    pytest-xvfb;sys_platform == 'linux'

[options.package_data]
* = *.yaml
