[metadata]
name = napari-matplotlib
description = A plugin to use Matplotlib with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matplotlib/napari-matplotlib
author = David Stansby
author_email = d.stansby@ucl.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/matplotlib/napari-matplotlib/issues
    Documentation = https://napari-matplotlib.github.io
    Source Code = https://github.com/matplotlib/napari-matplotlib
    User Support = https://github.com/matplotlib/napari-matplotlib/issues

[options]
packages = find:
install_requires =
    matplotlib
    napari<0.5
    numpy>=1.23
    tinycss2
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-matplotlib = napari_matplotlib:napari.yaml

[options.extras_require]
docs =
    napari[all]
    numpydoc
    pydantic<2
    pydata-sphinx-theme
    sphinx
    sphinx-automodapi
    sphinx-gallery
testing =
    napari[pyqt6_experimental]>=0.4.18
    pooch
    pyqt6
    pytest
    pytest-cov
    pytest-mock
    pytest-mpl
    pytest-qt
    tox
    pytest-xvfb;sys_platform == 'linux'

[options.package_data]
* = *.yaml
